# OsmAnd-core

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  Android.mk  CMakeLists.txt  CMakePreset.json  CMakePresets.json  LICENSE  OsmAndCore_ios.package  OsmAndCore_wp8.sln  OsmAndCore_wp8.vcxproj  OsmAndCore_wp8.vcxproj.filters  README.md  android-configure.sh  core.cmake  core.swig  embed-resources.list  embed-resources.py  embed-resources.sh  embed-resources.stamp  gen-resources-list.py  gen-resources-list.sh  routing.xml  swig-osmand.i
.github/workflows/: ci.yml
OsmAnd-java/: .classpath  .gitignore  .project  build.xml  native.sh  protobuf.diff
OsmAndCore_ios.xcodeproj/: project.pbxproj
avian/: .gitignore  osmand-avian.pro  prepare-osmand-avian.sh  prepare-osmand-avian_wp8.sh  routing_test.cpp
client/: Location.cpp_  MapTileSource.cpp  MapView.h  OsmAndApplication.cpp  OsmAndApplication.h  OsmAndMapDataLayer.cpp  OsmAndMapDataLayer.h  OsmAndMapTileSource.cpp  OsmAndMapTileSource.h  OsmAndMapView.cpp  OsmAndMapView.h  OsmAndRasterMapLayer.cpp  OsmAndRasterMapLayer.h  OsmAndSettings.cpp  OsmAndSettings.h
embeddable-resources/: .gitignore  routing.xml
include/: Amenity.h  Area.h  BaseAtlasMapRenderer.h  Building.h  Common.h  CommonTypes.h  Concurrent.h  HillshadeTileProvider.h  IMapBitmapTileProvider.h  IMapElevationDataProvider.h  IMapRenderer.h  IMapTileProvider.h  IQueryCallback.h  IQueryController.h  IQueryFilter.h  IRenderer.h  LambdaQueryFilter.h  Location.h_  Logging.h  MapDataCache.h  MapObject.h  MapTileSource.h  MapView.h  ObfAddressRegionSection.h  ObfAddressSection.h  ObfData.h  ObfMapSection.h  ObfPoiRegionSection.h  ObfPoiSection.h  ObfReader.h  ObfRoutingRegionSection.h  ObfRoutingSection.h  ObfSection.h  ObfTransportRegionSection.h  ObfTransportSection.h  OneDegreeMapElevationDataProvider.h  OneDegreeMapElevationDataProvider_Flat.h  OnlineMapRasterTileProvider.h  OsmAndApplication.h  OsmAndApplication.h_  (+44 more)
include/OsmAndCore/: AccessLockCounter.h  ArabicNormalizer.h  ArchiveReader.h  ArchiveWriter.h  ArrayMap.h  BaseObject.h  Bitmask.h  CachedOsmandIndexes.h  CachingFontFinder.h  CachingFontsCollection.h  CachingRoadLocator.h  CachingTypefaceFinder.h  Callable.h  ChainedFontFinder.h  ChainedTypefaceFinder.h  CollatorStringMatcher.h  Color.h  Common.h  CommonSWIG.h  CommonTypes.h  Concurrent.h  CoreFontsCollection.h  CoreResourcesEmbeddedBundle.h  DefaultLogSink.h  EmbeddedFontFinder.h  EmbeddedResources.h  EmbeddedTypefaceFinder.h  FavoriteLocationsCollection.h  ForwardReference.h  (+107 more)
protos/: OBF.pb.cc  OBF.pb.h  OBF.proto  README  generate.cmd  generate.sh  osmand_index.pb.cc  osmand_index.pb.h
samples/java/: .gitignore  CMakeLists.txt
samples/java/src/: Sample1.java  sample1.java
src/: AccessLockCounter.cpp  AccessLockCounter_P.cpp  AccessLockCounter_P.h  Amenity.cpp  ArabicNormalizer.cpp  ArchiveReader.cpp  ArchiveReader_P.cpp  ArchiveReader_P.h  ArchiveWriter.cpp  ArchiveWriter_P.cpp  ArchiveWriter_P.h  AtlasMapRenderer_OpenGL.cpp  AtlasMapRenderer_OpenGL.h  BaseAtlasMapRenderer.cpp  BaseAtlasMapRenderer.h  BaseObject.cpp  Building.cpp  CachedOsmandIndexes.cpp  CachedOsmandIndexes_P.cpp  CachedOsmandIndexes_P.h  CachingFontFinder.cpp  CachingFontsCollection.cpp  CachingFontsCollection_P.cpp  CachingFontsCollection_P.h  CachingRoadLocator.cpp  CachingRoadLocator_P.cpp  CachingRoadLocator_P.h  CachingTypefaceFinder.cpp  ChainedFontFinder.cpp  ChainedTypefaceFinder.cpp  CollatorStringMatcher.cpp  CollatorStringMatcher_P.cpp  CollatorStringMatcher_P.h  Color.cpp  Concurrent.cpp  CoreFontsCollection.cpp  CoreFontsCollection_private.h  CoreResourcesEmbeddedBundle.cpp  CoreResourcesEmbeddedBundle_P.cpp  CoreResourcesEmbeddedBundle_P.h  (+192 more)
swig/: OsmAndCore_Stubs.h  QHash.i  QMap.i  QString.i  SwigUtilities.h
targets/: .gitignore  amd64-linux-clang.sh  amd64-linux-gcc.sh  amd64-windows-vc10.cmd  amd64-windows-vc11.cmd  amd64-windows-vc12.cmd  i686-linux-gcc.sh  intel-darwin.sh  x86-windows-vc10.cmd  x86-windows-vc11.cmd  x86-windows-vc12.cmd
targets/.cmake/: CMakeLists.txt  common.cmake
targets/.cmake/cpu-specific/: arm-cortex-a8.cmake
targets/.cmake/projects/OsmAndCore/: CMakeLists.txt
targets/.cmake/projects/expat/: CMakeLists.txt
targets/.cmake/projects/freetype/: CMakeLists.txt
targets/.cmake/projects/giflib/: CMakeLists.txt
targets/.cmake/projects/harfbuzz/: CMakeLists.txt
targets/.cmake/projects/jpeg/: CMakeLists.txt
targets/.cmake/projects/libpng/: CMakeLists.txt
targets/.cmake/projects/protobuf/: CMakeLists.txt
targets/.cmake/projects/skia/: CMakeLists.txt
targets/.cmake/projects/zlib/: CMakeLists.txt
targets/.cmake/targets/: amd64-linux-clang.cmake  amd64-linux-gcc.cmake  arm-linux-gnueabi-gcc.cmake  i686-linux-gcc.cmake  intel-darwin-clang.cmake
targets/.cmake/utils/: makefile.sh  xcode.sh
tests/: CoordinateSearch.qbs  OsmAndCoreTests.qbs
tests/unit/: CMakeLists.txt  SearchByCoordinate.cpp  SearchByCoordinate.h  TestAddressSearch.cpp  TestAddressSearch.qbs  TestCoordinateSearch.cpp  TestCoordinateSearch.qbs  TestGeoTiffRasterWindow.cpp  TestGeoTiffRasterWindow.qbs  TestSearchByCoordinate.cpp  TestSearchByCoordinate.h  UnitTest.qbs  unit.qbs
tools/: CMakeLists.txt  OsmAndCoreTools.h  tools.cmake
tools/OsmAndCoreTools/: Common.h  EyePiece.cpp  EyePiece.h  Inspector.cpp  Inspector.h  Verifier.cpp  Verifier.h  Voyager.cpp  Voyager.h
tools/include/OsmAndCoreTools/: CStyle.h  Common.h  EyePiece.h  Inspector.h  Productizer.h  Styler.h  Utilities.h  Voyager.h
tools/src/: CStyle.cpp  EyePiece.cpp  Inspector.cpp  Productizer.cpp  Styler.cpp  Utilities.cpp  Voyager.cpp
utils/: Android.mk  CMakeLists.txt  EyePiece.cpp  EyePiece.h  Inspector.cpp  Inspector.h  OsmAndCoreUtils.h  Voyager.cpp  Voyager.h
utils/OsmAndCoreUtils/: Common.h  EyePiece.cpp  EyePiece.h  Inspector.cpp  Inspector.h  Verifier.cpp  Verifier.h  Voyager.cpp  Voyager.h
utils/inspector/: CMakeLists.txt  Inspector.cpp  Inspector.h
wrappers/: wrappers.cmake
wrappers/java/: .gitignore  Android.mk  CMakeLists.txt  build.gradle  generate.sh
(+1361 files in other folders)
